--- a/src/app/company/data-select/data-select.component.html
+++ b/src/app/company/data-select/data-select.component.html
@@ -1,5 +1,5 @@
 <div class="list-group">
     <ng-template ngFor let-option [ngForOf]="data">
-        <a routerLink="/company/{{option.name}}" class="list-group-item list-group-item-action">{{option.name}}</a>
+        <a (click)="pickOption(option)" class="list-group-item list-group-item-action">{{option.name}}</a>
     </ng-template>
 </div>
