--- a/src/app/company/data-form/data-form.component.html
+++ b/src/app/company/data-form/data-form.component.html
@@ -4,6 +4,9 @@
     </div>
     <div class="col-1">
         <div class="btn-group" role="group">
+            <button (click)="goBack()" type="button" class="btn btn-default">
+                <fa-icon [icon]="backIcon"></fa-icon>
+            </button>
             <button type="button" class="btn btn-default">
                 <fa-icon [icon]="editIcon"></fa-icon>
             </button>
