--- a/src/app/company/data-form/data-form.component.html
+++ b/src/app/company/data-form/data-form.component.html
@@ -20,7 +20,10 @@
     <div class="form-group row">
         <label for="location" class="col-sm-2 col-form-label">Location</label>
         <div class="col-sm-10">
-            <input formControlName="location" type="text" class="form-control" id="location">
+            <input formControlName="location" type="text" class="form-control" id="location" [ngClass]="{ 'is-invalid': errors('location') }">
+            <div *ngIf="errors('location')" class="invalid-feedback">
+                <div *ngIf="error('location', 'required')">Password is required</div>
+            </div>
         </div>
     </div>
     <h2>Employees</h2>
