--- a/src/app/company/data-form/data-form.component.html
+++ b/src/app/company/data-form/data-form.component.html
@@ -37,7 +37,7 @@
                     <div class="form-group row" [formGroupName]="i">
                         <label for="{{'name'+i}}" class="col-sm-2 col-form-label">Name</label>
                         <div class="col-sm-10">
-                            <input formControlName="name" type="text" class="form-control" id="name"
+                            <input formControlName="name" type="text" class="form-control" id="{{'name'+i}}"
                                 [ngClass]="{ 'is-invalid': errorsInEmployees('name', i) }">
                             <div *ngIf="errorsInEmployees('name', i)" class="invalid-feedback">
                                 <div *ngIf="errorInEmployees('name', i, 'required')">Name is required</div>
